MODON MRE BPDEV/force-app/main/default/objects/ServiceRequest__c/fields/Actual_Installment_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_Installment_Date__c</fullName>
    <formula>IF(
    ISBLANK(Sales_Order_Installment__r.Original_Milestone_Date__c),
    Sales_Order_Installment__r.MilestoneDate__c,
    Sales_Order_Installment__r.Original_Milestone_Date__c
)</formula>
    <label>Actual Installment Date</label>
    <type>Date</type>
</CustomField>