MODON MRE BPDEV/force-app/main/default/objects/ServiceRequest__c/fields/Actual_Paid__c.field-meta.xml
<CustomField>
    <fullName>Actual_Paid__c</fullName>
    <label>Actual Paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>