MODON MRE BPDEV/force-app/main/default/objects/ServiceRequest__c/fields/Actual_Requested_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_Requested_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Actual Requested Date</label>
    <type>Date</type>
</CustomField>