MODON MRE BPDEV/force-app/main/default/objects/ServiceRequest__c/fields/Adjusted_Installment_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Adjusted_Installment_Schedule__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Adjusted Installment Schedule</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>