MODON MRE BPDEV/force-app/main/default/objects/ServiceRequest__c/fields/ADM__c.field-meta.xml
<CustomField>
    <fullName>ADM__c</fullName>
    <label>ADM Sub Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Developer Approval</fullName>
            </value>
            <value>
                <fullName>DMT Review and Approval</fullName>
            </value>
            <value>
                <fullName>Payment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>