MODON MRE BPDEV/force-app/main/default/objects/ServiceRequest__c/fields/ADM_ADGM_Refund_Amount__c.field-meta.xml
<CustomField>
    <fullName>ADM_ADGM_Refund_Amount__c</fullName>
    <label>ADM/ ADGM Refund Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>