MODON MRE BPDEV/force-app/main/default/objects/ServiceRequest__c/fields/ADM_De_Registration_Id__c.field-meta.xml
<CustomField>
    <fullName>ADM_De_Registration_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ADM De-Registration Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>