MODON MRE BPDEV/force-app/main/default/objects/ServiceRequest__c/fields/ADM_Fee__c.field-meta.xml
<CustomField>
    <fullName>ADM_Fee__c</fullName>
    <label>ADM Fee</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>