MODON MRE BPDEV/force-app/main/default/objects/ServiceRequest__c/fields/ADM_Paid_Amount__c.field-meta.xml
<CustomField>
    <fullName>ADM_Paid_Amount__c</fullName>
    <label>ADM Paid Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>