MODON MRE BPDEV/force-app/main/default/objects/ServiceRequest__c/fields/ADM_Payment_Status__c.field-meta.xml
<CustomField>
    <fullName>ADM_Payment_Status__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ADM Payment Status</label>
    <length>20</length>
    <type>Text</type>
</CustomField>