MODON MRE BPDEV/force-app/main/default/objects/ServiceRequest__c/fields/Advacne_amount_paid__c.field-meta.xml
<CustomField>
    <fullName>Advacne_amount_paid__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Advance amount paid</label>
    <length>22</length>
    <type>Text</type>
</CustomField>