MODON MRE BPDEV/force-app/main/default/objects/ServiceRequest__c/fields/Agreement_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Effective_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Agreement Effective Date</label>
    <type>Date</type>
</CustomField>