MODON MRE BPDEV/force-app/main/default/objects/ServiceRequest__c/fields/Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Approval_Status__c</fullName>
    <label>Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>Submitted for Approval</fullName>
            </value>
            <value>
                <fullName>Awaiting for Manager Approval</fullName>
            </value>
            <value>
                <fullName>Awaiting for Director Approval</fullName>
            </value>
            <value>
                <fullName>Awaiting for CCO Approval</fullName>
            </value>
            <value>
                <fullName>Awaiting for CFO Approval</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Awaiting for CEO Approval</fullName>
                <isActive>false</isActive>
                <label>Awaiting for CEO Approval</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>