MODON MRE BPDEV/force-app/main/default/objects/ServiceRequest__c/fields/Approved_Invoice_Amount__c.field-meta.xml
<CustomField>
    <fullName>Approved_Invoice_Amount__c</fullName>
    <label>Approved Invoice Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>