MODON MRE BPDEV/force-app/main/default/objects/ServiceRequest__c/fields/Broker_Agency_Owner_Email__c.field-meta.xml
<CustomField>
    <fullName>Broker_Agency_Owner_Email__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Broker Agency Owner Email</label>
    <type>Email</type>
</CustomField>