MODON MRE BPDEV/force-app/main/default/objects/ServiceRequest__c/fields/Broker_Agency_Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>Broker_Agency_Owner_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Broker Agency Owner Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>