MODON MRE BPDEV/force-app/main/default/objects/ServiceRequest__c/fields/Buyer_Validator_Email__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Validator_Email__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Buyer Validator Email</label>
    <type>Email</type>
</CustomField>