MODON MRE BPDEV/force-app/main/default/objects/ServiceRequest__c/fields/Buyer_Validator_Name__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Validator_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Buyer Validator Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>