MODON MRE BPDEV/force-app/main/default/objects/ServiceRequest__c/fields/Cancellation_Comment__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Comment__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Cancellation Comment</label>
    <type>TextArea</type>
</CustomField>