MODON MRE BPDEV/force-app/main/default/objects/ServiceRequest__c/fields/Cancellation_Date__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Cancellation Date</label>
    <type>Date</type>
</CustomField>