MODON MRE BPDEV/force-app/main/default/objects/ServiceRequest__c/fields/Cancellation_Reason__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Reason__c</fullName>
    <label>Cancellation Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Out of Scope</fullName>
            </value>
            <value>
                <fullName>KYC Rejection</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>