MODON MRE BPDEV/force-app/main/default/objects/ServiceRequest__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Handover</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>