MODON MRE BPDEV/force-app/main/default/objects/ServiceRequest__c/fields/Charge__c.field-meta.xml
<CustomField>
    <fullName>Charge__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Charge</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Sales_Order_Installment__c</field>
            <operation>equals</operation>
            <valueField>Charge__c.SalesOrderInstallment__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Charge__c</referenceTo>
    <relationshipLabel>Service Requests</relationshipLabel>
    <relationshipName>Service_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>