MODON MRE BPDEV/force-app/main/default/objects/ServiceRequest__c/fields/ChargeAmount__c.field-meta.xml
<CustomField>
    <fullName>ChargeAmount__c</fullName>
    <label>ChargeAmount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>