MODON MRE BPDEV/force-app/main/default/objects/ServiceRequest__c/fields/Cheque_Clearance_Status__c.field-meta.xml
<CustomField>
    <fullName>Cheque_Clearance_Status__c</fullName>
    <label>Cheque Clearance Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cleared</fullName>
            </value>
            <value>
                <fullName>Pending Finance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>