MODON MRE BPDEV/force-app/main/default/objects/ServiceRequest__c/fields/Cheque_Clearance_User__c.field-meta.xml
<CustomField>
    <fullName>Cheque_Clearance_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cheque Clearance User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Service_Requests3</relationshipName>
    <type>Lookup</type>
</CustomField>