MODON MRE BPDEV/force-app/main/default/objects/ServiceRequest__c/fields/CloseDate__c.field-meta.xml
<CustomField>
    <fullName>CloseDate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CloseDate</label>
    <type>Date</type>
</CustomField>