MODON MRE BPDEV/force-app/main/default/objects/ServiceRequest__c/fields/CM_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>CM_Approval_Status__c</fullName>
    <label>CM Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>Submitted for Approval</fullName>
            </value>
            <value>
                <fullName>Approved by CM Manager</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Approved by CM Agent</fullName>
                <isActive>false</isActive>
                <label>Approved by CM Agent</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>