MODON MRE BPDEV/force-app/main/default/objects/ServiceRequest__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Comments</label>
    <length>400</length>
    <type>LongTextArea</type>
</CustomField>