MODON MRE BPDEV/force-app/main/default/objects/ServiceRequest__c/fields/Completion_Date_in_Months__c.field-meta.xml
<CustomField>
    <fullName>Completion_Date_in_Months__c</fullName>
    <label>Completion Date in Months</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>