MODON MRE BPDEV/force-app/main/default/objects/ServiceRequest__c/fields/Dari_Application_Number__c.field-meta.xml
<CustomField>
    <fullName>Dari_Application_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Dari Application Number</label>
    <length>18</length>
    <type>Text</type>
</CustomField>