MODON MRE BPDEV/force-app/main/default/objects/ServiceRequest__c/fields/Dari_Application_Submitted_Date__c.field-meta.xml
<CustomField>
    <fullName>Dari_Application_Submitted_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Dari Application Submitted Date</label>
    <type>Date</type>
</CustomField>