MODON MRE BPDEV/force-app/main/default/objects/ServiceRequest__c/fields/DebitNoteAmount__c.field-meta.xml
<CustomField>
    <fullName>DebitNoteAmount__c</fullName>
    <label>Debit Note Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>