MODON MRE BPDEV/force-app/main/default/objects/ServiceRequest__c/fields/Decision_Type__c.field-meta.xml
<CustomField>
    <fullName>Decision_Type__c</fullName>
    <label>Decision Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unit Cancellation</fullName>
            </value>
            <value>
                <fullName>Legal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>