MODON MRE BPDEV/force-app/main/default/objects/ServiceRequest__c/fields/Direct_Debit_Request_Status__c.field-meta.xml
<CustomField>
    <fullName>Direct_Debit_Request_Status__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Direct Debit Request Status</label>
    <length>20</length>
    <type>Text</type>
</CustomField>