MODON MRE BPDEV/force-app/main/default/objects/ServiceRequest__c/fields/Docusign_Envelope_Status__c.field-meta.xml
<CustomField>
    <fullName>Docusign_Envelope_Status__c</fullName>
    <label>Docusign Envelope Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Envelope Sent</fullName>
            </value>
            <value>
                <fullName>Envelope Delivered</fullName>
            </value>
            <value>
                <fullName>Envelope Completed</fullName>
            </value>
            <value>
                <fullName>Envelope Declined</fullName>
            </value>
            <value>
                <fullName>Envelope Voided</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>