MODON MRE BPDEV/force-app/main/default/objects/ServiceRequest__c/fields/Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Due Date</label>
    <type>DateTime</type>
</CustomField>