MODON MRE BPDEV/force-app/main/default/objects/ServiceRequest__c/fields/Equity_Transfer_Amount__c.field-meta.xml
<CustomField>
    <fullName>Equity_Transfer_Amount__c</fullName>
    <label>Equity Transfer Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>