MODON MRE BPDEV/force-app/main/default/objects/ServiceRequest__c/fields/Extended_NOC_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Extended_NOC_Approval_Status__c</fullName>
    <label>Extended NOC  Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Approve with new dates</fullName>
            </value>
            <value>
                <fullName>Approve</fullName>
                <isActive>false</isActive>
                <label>Approve</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>