MODON MRE BPDEV/force-app/main/default/objects/ServiceRequest__c/fields/Extension_Date_On_SOI__c.field-meta.xml
<CustomField>
    <fullName>Extension_Date_On_SOI__c</fullName>
    <formula>Sales_Order_Installment__r.ExtensionDate__c</formula>
    <label>Extension Date On SOI</label>
    <type>Date</type>
</CustomField>