MODON MRE BPDEV/force-app/main/default/objects/ServiceRequest__c/fields/External_Approval_Token__c.field-meta.xml
<CustomField>
    <fullName>External_Approval_Token__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>External Approval Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>