MODON MRE BPDEV/force-app/main/default/objects/ServiceRequest__c/fields/Fast_Track_Enabled_By__c.field-meta.xml
<CustomField>
    <fullName>Fast_Track_Enabled_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fast Track Enabled By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Service_Requests1</relationshipName>
    <type>Lookup</type>
</CustomField>