MODON MRE BPDEV/force-app/main/default/objects/ServiceRequest__c/fields/Fast_Track_Enabled_Date__c.field-meta.xml
<CustomField>
    <fullName>Fast_Track_Enabled_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Fast Track Enabled Date</label>
    <type>Date</type>
</CustomField>