MODON MRE BPDEV/force-app/main/default/objects/ServiceRequest__c/fields/Final_Execution_Complete__c.field-meta.xml
<CustomField>
    <fullName>Final_Execution_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Final Execution Complete</label>
    <type>Checkbox</type>
</CustomField>