MODON MRE BPDEV/force-app/main/default/objects/ServiceRequest__c/fields/Finance_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Finance_Approval_Status__c</fullName>
    <label>Finance Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>Submitted for Approval</fullName>
            </value>
            <value>
                <fullName>Approved by Manager</fullName>
            </value>
            <value>
                <fullName>Approved by Agent</fullName>
                <isActive>false</isActive>
                <label>Approved by Agent</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>