MODON MRE BPDEV/force-app/main/default/objects/ServiceRequest__c/fields/Forfeiture__c.field-meta.xml
<CustomField>
    <fullName>Forfeiture__c</fullName>
    <formula>IF(
    RecordType.DeveloperName = &quot;Pre_Unit_Cancellation&quot;,

    IF(
        ISPICKVAL(Is_ADM_Refund_Needed__c, &quot;Both&quot;),
        0,

        IF(
            ISPICKVAL(Is_ADM_Refund_Needed__c, &quot;ADM&quot;),
            Total_Paid_Amount__c,

            IF(
                ISPICKVAL(Is_ADM_Refund_Needed__c, &quot;Down Payment&quot;),
                ADM_Paid_Amount__c,
                0
            )
        )
    ),

    IF(
        RecordType.DeveloperName = &quot;Post_Unit_Cancellation&quot;,

        Management_Fee__c
        + Broker_Commission__c
        + Sales_Commission__c
        + LPC__c
        + Legal_Admin_Fees__c,

        Broker_Commission__c
        + Sales_Commission__c
        + Discount__c
        + Rebate__c
        + ADM_Waiver__c
        + Service_Charge_Waiver__c
        + LPC__c
        + Legal_Admin_Fees__c
        + Market_Loss__c
        + Management_Fee__c
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Forfeiture Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>