MODON MRE BPDEV/force-app/main/default/objects/ServiceRequest__c/fields/Forfeiture_Amount__c.field-meta.xml
<CustomField>
    <fullName>Forfeiture_Amount__c</fullName>
    <label>Forfeiture Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>