MODON MRE BPDEV/force-app/main/default/objects/ServiceRequest__c/fields/GC_Inline_approval__c.field-meta.xml
<CustomField>
    <fullName>GC_Inline_approval__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>GC  Inline approval</label>
    <length>80</length>
    <type>Text</type>
</CustomField>