MODON MRE BPDEV/force-app/main/default/objects/ServiceRequest__c/fields/Initial_Purchase_Date__c.field-meta.xml
<CustomField>
    <fullName>Initial_Purchase_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Initial Purchase Date</label>
    <type>Date</type>
</CustomField>