MODON MRE BPDEV/force-app/main/default/objects/ServiceRequest__c/fields/Is_ADM_Refund_Needed__c.field-meta.xml
<CustomField>
    <fullName>Is_ADM_Refund_Needed__c</fullName>
    <label>Refund Type?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ADM</fullName>
            </value>
            <value>
                <fullName>Down Payment</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>