MODON MRE BPDEV/force-app/main/default/objects/ServiceRequest__c/fields/Is_all_Forefeiture_Entered__c.field-meta.xml
<CustomField>
    <fullName>Is_all_Forefeiture_Entered__c</fullName>
    <formula>Secondary_Market_Value__c &gt;=0 &amp;&amp;
Market_Loss__c &gt;=0 &amp;&amp;
Sales_Commission__c &gt;=0 &amp;&amp;
Broker_Commission__c &gt;=0 &amp;&amp;
Discount__c &gt;=0 &amp;&amp;
Rebate__c &gt;=0 &amp;&amp; ADM_Fee__c &gt;=0 &amp;&amp;
Service_Charge_Waiver__c &gt;=0 &amp;&amp;
LPC__c &gt;=0 &amp;&amp;
Legal_Admin_Fees__c &gt;=0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is all Forefeiture Entered?</label>
    <type>Checkbox</type>
</CustomField>