MODON MRE BPDEV/force-app/main/default/objects/ServiceRequest__c/fields/Is_NOC_Extended__c.field-meta.xml
<CustomField>
    <fullName>Is_NOC_Extended__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is NOC Extended</label>
    <type>Checkbox</type>
</CustomField>