MODON MRE BPDEV/force-app/main/default/objects/ServiceRequest__c/fields/Joint_Owner__c.field-meta.xml
<CustomField>
    <fullName>Joint_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Joint Owner</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>ServiceRequests</relationshipName>
    <type>Lookup</type>
</CustomField>