MODON MRE BPDEV/force-app/main/default/objects/ServiceRequest__c/fields/Justification_For_Payment_Plan_Swap__c.field-meta.xml
<CustomField>
    <fullName>Justification_For_Payment_Plan_Swap__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Justification For Payment Plan Swap</label>
    <type>TextArea</type>
</CustomField>