MODON MRE BPDEV/force-app/main/default/objects/ServiceRequest__c/fields/Legal_Admin_Fees__c.field-meta.xml
<CustomField>
    <fullName>Legal_Admin_Fees__c</fullName>
    <label>Legal/Admin Fees</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>