MODON MRE BPDEV/force-app/main/default/objects/ServiceRequest__c/fields/Legal_Decision__c.field-meta.xml
<CustomField>
    <fullName>Legal_Decision__c</fullName>
    <label>Legal Decision</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cancel with Refund</fullName>
            </value>
            <value>
                <fullName>Cancel without Refund</fullName>
            </value>
            <value>
                <fullName>Conditional Cancellation</fullName>
            </value>
            <value>
                <fullName>Conditional Upgrade/Downgrade</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>