MODON MRE BPDEV/force-app/main/default/objects/ServiceRequest__c/fields/LinkedSR__c.field-meta.xml
<CustomField>
    <fullName>LinkedSR__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LinkedSR</label>
    <referenceTo>ServiceRequest__c</referenceTo>
    <relationshipLabel>Service Requests (LinkedSR)</relationshipLabel>
    <relationshipName>Service_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>