MODON MRE BPDEV/force-app/main/default/objects/ServiceRequest__c/fields/LPC__c.field-meta.xml
<CustomField>
    <fullName>LPC__c</fullName>
    <label>LPC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>