MODON MRE BPDEV/force-app/main/default/objects/ServiceRequest__c/fields/LPC_Amount__c.field-meta.xml
<CustomField>
    <fullName>LPC_Amount__c</fullName>
    <label>LPC Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>