MODON MRE BPDEV/force-app/main/default/objects/ServiceRequest__c/fields/LPC_Amt_diff__c.field-meta.xml
<CustomField>
    <fullName>LPC_Amt_diff__c</fullName>
    <formula>LPC_Charged_Amount__c - LPC_Waived_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LPC Amt diff</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>